kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: his
  labels:
    name: his
    environment: production
